force-app/main/default/objects/Credential__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description and notes</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>